--- a/FCI/ui/fci_04_batch_issues_submenu.ui
+++ b/FCI/ui/fci_04_batch_issues_submenu.ui
@@ -88,7 +88,7 @@ background-color: rgb(170, 0, 0);
      </property>
      <property name="font">
       <font>
-       <family>MS Sans Serif</family>
+       <family>Arial</family>
        <pointsize>14</pointsize>
        <weight>75</weight>
        <bold>true</bold>
