--- a/FCI/ui/fci_13_admin_submenu.ui
+++ b/FCI/ui/fci_13_admin_submenu.ui
@@ -19,6 +19,9 @@
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
+  <property name="styleSheet">
+   <string notr="true">background-color: rgb(47, 141, 255);</string>
+  </property>
   <widget class="QWidget" name="centralwidget">
    <widget class="QFrame" name="frame">
     <property name="geometry">
@@ -29,19 +32,25 @@
       <height>651</height>
      </rect>
     </property>
+    <property name="styleSheet">
+     <string notr="true">color: rgb(255, 255, 255);</string>
+    </property>
     <property name="frameShape">
-     <enum>QFrame::StyledPanel</enum>
+     <enum>QFrame::Box</enum>
     </property>
     <property name="frameShadow">
-     <enum>QFrame::Raised</enum>
+     <enum>QFrame::Plain</enum>
+    </property>
+    <property name="lineWidth">
+     <number>3</number>
     </property>
     <widget class="QPushButton" name="pushButton_4">
      <property name="geometry">
       <rect>
        <x>70</x>
-       <y>210</y>
+       <y>280</y>
        <width>481</width>
-       <height>191</height>
+       <height>121</height>
       </rect>
      </property>
      <property name="font">
@@ -52,17 +61,21 @@
        <bold>true</bold>
       </font>
      </property>
+     <property name="styleSheet">
+      <string notr="true">background-color: rgb(85, 170, 0);
+color: rgb(0, 0, 0);</string>
+     </property>
      <property name="text">
-      <string>Busssiness User</string>
+      <string>BUSINESS USER</string>
      </property>
     </widget>
     <widget class="QPushButton" name="pushButton_5">
      <property name="geometry">
       <rect>
-       <x>720</x>
-       <y>210</y>
-       <width>421</width>
-       <height>191</height>
+       <x>730</x>
+       <y>280</y>
+       <width>461</width>
+       <height>131</height>
       </rect>
      </property>
      <property name="font">
@@ -73,52 +86,33 @@
        <bold>true</bold>
       </font>
      </property>
-     <property name="text">
-      <string>System User</string>
-     </property>
-    </widget>
-    <widget class="QLabel" name="label">
-     <property name="geometry">
-      <rect>
-       <x>480</x>
-       <y>70</y>
-       <width>291</width>
-       <height>71</height>
-      </rect>
-     </property>
-     <property name="font">
-      <font>
-       <family>MS Sans Serif</family>
-       <pointsize>22</pointsize>
-      </font>
-     </property>
      <property name="styleSheet">
-      <string notr="true">color: rgb(170, 0, 127);</string>
+      <string notr="true">background-color: rgb(85, 170, 0);
+color: rgb(0, 0, 0);</string>
      </property>
      <property name="text">
-      <string>Administration</string>
-     </property>
-     <property name="alignment">
-      <set>Qt::AlignCenter</set>
+      <string>SERVICE USER</string>
      </property>
     </widget>
     <widget class="QLabel" name="label_2">
      <property name="geometry">
       <rect>
-       <x>1050</x>
-       <y>20</y>
-       <width>141</width>
-       <height>31</height>
+       <x>940</x>
+       <y>40</y>
+       <width>271</width>
+       <height>41</height>
       </rect>
      </property>
      <property name="font">
       <font>
-       <family>MS Sans Serif</family>
-       <pointsize>10</pointsize>
+       <family>Arial</family>
+       <pointsize>14</pointsize>
+       <weight>75</weight>
+       <bold>true</bold>
       </font>
      </property>
      <property name="styleSheet">
-      <string notr="true">color: rgb(0, 0, 255);</string>
+      <string notr="true">color: rgb(255, 255, 255);</string>
      </property>
      <property name="text">
       <string>24 Nov 2019 12:23:11</string>
@@ -127,17 +121,56 @@
       <set>Qt::AlignCenter</set>
      </property>
     </widget>
-    <widget class="QPushButton" name="pushButton_3">
+    <widget class="QLabel" name="label_3">
      <property name="geometry">
       <rect>
-       <x>570</x>
-       <y>500</y>
-       <width>75</width>
-       <height>31</height>
+       <x>450</x>
+       <y>120</y>
+       <width>381</width>
+       <height>71</height>
       </rect>
      </property>
+     <property name="font">
+      <font>
+       <family>Arial</family>
+       <pointsize>24</pointsize>
+       <weight>75</weight>
+       <bold>true</bold>
+      </font>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">color: rgb(244, 244, 0);
+background-color: rgb(170, 0, 0);</string>
+     </property>
      <property name="text">
-      <string>Return</string>
+      <string>CONFIGURATION</string>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignCenter</set>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="pushButton_6">
+     <property name="geometry">
+      <rect>
+       <x>550</x>
+       <y>530</y>
+       <width>151</width>
+       <height>41</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <family>Arial</family>
+       <pointsize>12</pointsize>
+       <weight>75</weight>
+       <bold>true</bold>
+      </font>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">background-color: rgb(170, 0, 0);</string>
+     </property>
+     <property name="text">
+      <string>RETURN</string>
      </property>
     </widget>
    </widget>
