--- a/FCI/ui/fci_35_calbration.ui
+++ b/FCI/ui/fci_35_calbration.ui
@@ -19,6 +19,9 @@
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
+  <property name="styleSheet">
+   <string notr="true">background-color: rgb(0, 170, 255);</string>
+  </property>
   <widget class="QWidget" name="centralwidget">
    <widget class="QFrame" name="frame">
     <property name="geometry">
@@ -26,7 +29,7 @@
       <x>20</x>
       <y>10</y>
       <width>1331</width>
-      <height>721</height>
+      <height>711</height>
      </rect>
     </property>
     <property name="font">
@@ -35,13 +38,20 @@
      </font>
     </property>
     <property name="styleSheet">
-     <string notr="true">background-color: rgb(0, 170, 255);</string>
+     <string notr="true">background-color: rgb(0, 170, 255);
+color: rgb(255, 255, 255);</string>
     </property>
     <property name="frameShape">
-     <enum>QFrame::StyledPanel</enum>
+     <enum>QFrame::Box</enum>
     </property>
     <property name="frameShadow">
-     <enum>QFrame::Raised</enum>
+     <enum>QFrame::Plain</enum>
+    </property>
+    <property name="lineWidth">
+     <number>3</number>
+    </property>
+    <property name="midLineWidth">
+     <number>0</number>
     </property>
     <widget class="QLabel" name="label_20">
      <property name="geometry">
@@ -77,7 +87,7 @@
        <x>480</x>
        <y>550</y>
        <width>111</width>
-       <height>61</height>
+       <height>41</height>
       </rect>
      </property>
      <property name="font">
@@ -99,22 +109,25 @@ color: rgb(255, 255, 0);</string>
     <widget class="QLabel" name="label">
      <property name="geometry">
       <rect>
-       <x>390</x>
+       <x>340</x>
        <y>10</y>
-       <width>541</width>
+       <width>631</width>
        <height>51</height>
       </rect>
      </property>
      <property name="font">
       <font>
        <family>Arial</family>
-       <pointsize>16</pointsize>
+       <pointsize>17</pointsize>
        <weight>75</weight>
        <bold>true</bold>
       </font>
      </property>
      <property name="text">
       <string>PARAMETER CONFIGURATION AND CALIBRATION</string>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignCenter</set>
      </property>
     </widget>
     <widget class="QGroupBox" name="groupBox">
@@ -478,7 +491,7 @@ color: rgb(255, 255, 0);</string>
        <rect>
         <x>180</x>
         <y>60</y>
-        <width>47</width>
+        <width>51</width>
         <height>51</height>
        </rect>
       </property>
@@ -507,7 +520,7 @@ color: rgb(255, 255, 0);</string>
      <property name="font">
       <font>
        <family>Arial</family>
-       <pointsize>18</pointsize>
+       <pointsize>16</pointsize>
        <weight>75</weight>
        <bold>true</bold>
       </font>
@@ -616,15 +629,15 @@ border-color: rgb(255, 0, 0);</string>
      <property name="geometry">
       <rect>
        <x>780</x>
-       <y>260</y>
+       <y>270</y>
        <width>511</width>
-       <height>411</height>
+       <height>421</height>
       </rect>
      </property>
      <property name="font">
       <font>
        <family>Arial</family>
-       <pointsize>20</pointsize>
+       <pointsize>16</pointsize>
        <weight>75</weight>
        <bold>true</bold>
       </font>
@@ -639,10 +652,10 @@ border-color: rgb(0, 0, 0);</string>
      <widget class="QPushButton" name="pushButton_14">
       <property name="geometry">
        <rect>
-        <x>30</x>
+        <x>120</x>
         <y>50</y>
-        <width>301</width>
-        <height>61</height>
+        <width>271</width>
+        <height>51</height>
        </rect>
       </property>
       <property name="font">
@@ -664,9 +677,9 @@ color: rgb(255, 255, 0);</string>
      <widget class="QPushButton" name="pushButton_16">
       <property name="geometry">
        <rect>
-        <x>250</x>
-        <y>320</y>
-        <width>241</width>
+        <x>280</x>
+        <y>210</y>
+        <width>181</width>
         <height>51</height>
        </rect>
       </property>
@@ -686,38 +699,11 @@ color: rgb(255, 255, 0);</string>
        <string>VERIFY</string>
       </property>
      </widget>
-     <widget class="QLabel" name="label_41">
-      <property name="geometry">
-       <rect>
-        <x>30</x>
-        <y>150</y>
-        <width>321</width>
-        <height>31</height>
-       </rect>
-      </property>
-      <property name="font">
-       <font>
-        <family>Arial</family>
-        <pointsize>14</pointsize>
-        <weight>75</weight>
-        <bold>true</bold>
-       </font>
-      </property>
-      <property name="styleSheet">
-       <string notr="true"/>
-      </property>
-      <property name="text">
-       <string>Please Enter the Load</string>
-      </property>
-      <property name="alignment">
-       <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
-      </property>
-     </widget>
      <widget class="QLineEdit" name="lineEdit">
       <property name="geometry">
        <rect>
-        <x>30</x>
-        <y>220</y>
+        <x>280</x>
+        <y>130</y>
         <width>181</width>
         <height>51</height>
        </rect>
@@ -732,15 +718,15 @@ color: rgb(255, 255, 0);</string>
        <string notr="true">background-color: rgb(239, 255, 241);</string>
       </property>
       <property name="text">
-       <string>30000</string>
+       <string/>
       </property>
      </widget>
      <widget class="QPushButton" name="pushButton_17">
       <property name="geometry">
        <rect>
-        <x>250</x>
-        <y>220</y>
-        <width>241</width>
+        <x>60</x>
+        <y>210</y>
+        <width>171</width>
         <height>51</height>
        </rect>
       </property>
@@ -759,6 +745,181 @@ color: rgb(255, 255, 0);</string>
       <property name="text">
        <string>CALLIBRATE</string>
       </property>
+     </widget>
+     <widget class="QFrame" name="frame_2">
+      <property name="geometry">
+       <rect>
+        <x>60</x>
+        <y>280</y>
+        <width>401</width>
+        <height>121</height>
+       </rect>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">color: rgb(255, 255, 0);
+background-color: rgb(0, 85, 0);</string>
+      </property>
+      <property name="frameShape">
+       <enum>QFrame::Box</enum>
+      </property>
+      <property name="frameShadow">
+       <enum>QFrame::Plain</enum>
+      </property>
+      <property name="lineWidth">
+       <number>3</number>
+      </property>
+      <widget class="QLabel" name="label_3">
+       <property name="geometry">
+        <rect>
+         <x>40</x>
+         <y>10</y>
+         <width>131</width>
+         <height>41</height>
+        </rect>
+       </property>
+       <property name="font">
+        <font>
+         <family>Arial</family>
+         <pointsize>16</pointsize>
+         <weight>75</weight>
+         <bold>true</bold>
+        </font>
+       </property>
+       <property name="text">
+        <string>K-Factor    :</string>
+       </property>
+       <property name="alignment">
+        <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
+       </property>
+      </widget>
+      <widget class="QLabel" name="label_8">
+       <property name="geometry">
+        <rect>
+         <x>180</x>
+         <y>10</y>
+         <width>171</width>
+         <height>41</height>
+        </rect>
+       </property>
+       <property name="font">
+        <font>
+         <family>Arial</family>
+         <pointsize>16</pointsize>
+         <weight>75</weight>
+         <bold>true</bold>
+        </font>
+       </property>
+       <property name="styleSheet">
+        <string notr="true"/>
+       </property>
+       <property name="text">
+        <string>122.007686787</string>
+       </property>
+       <property name="alignment">
+        <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
+       </property>
+      </widget>
+      <widget class="QLabel" name="label_9">
+       <property name="geometry">
+        <rect>
+         <x>40</x>
+         <y>60</y>
+         <width>131</width>
+         <height>41</height>
+        </rect>
+       </property>
+       <property name="font">
+        <font>
+         <family>Arial</family>
+         <pointsize>16</pointsize>
+         <weight>75</weight>
+         <bold>true</bold>
+        </font>
+       </property>
+       <property name="text">
+        <string>C- Date      :</string>
+       </property>
+       <property name="alignment">
+        <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
+       </property>
+      </widget>
+      <widget class="QLabel" name="label_10">
+       <property name="geometry">
+        <rect>
+         <x>180</x>
+         <y>60</y>
+         <width>191</width>
+         <height>41</height>
+        </rect>
+       </property>
+       <property name="font">
+        <font>
+         <family>Arial</family>
+         <pointsize>16</pointsize>
+         <weight>75</weight>
+         <bold>true</bold>
+        </font>
+       </property>
+       <property name="styleSheet">
+        <string notr="true"/>
+       </property>
+       <property name="text">
+        <string>2020-10-19 14:55</string>
+       </property>
+       <property name="alignment">
+        <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
+       </property>
+      </widget>
+     </widget>
+     <widget class="QFrame" name="frame_3">
+      <property name="geometry">
+       <rect>
+        <x>60</x>
+        <y>130</y>
+        <width>171</width>
+        <height>61</height>
+       </rect>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">color: rgb(255, 255, 0);
+background-color: rgb(0, 85, 0);</string>
+      </property>
+      <property name="frameShape">
+       <enum>QFrame::Box</enum>
+      </property>
+      <property name="frameShadow">
+       <enum>QFrame::Plain</enum>
+      </property>
+      <property name="lineWidth">
+       <number>3</number>
+      </property>
+      <widget class="QLabel" name="label_41">
+       <property name="geometry">
+        <rect>
+         <x>20</x>
+         <y>10</y>
+         <width>141</width>
+         <height>41</height>
+        </rect>
+       </property>
+       <property name="font">
+        <font>
+         <family>Arial</family>
+         <pointsize>14</pointsize>
+         <weight>75</weight>
+         <bold>true</bold>
+        </font>
+       </property>
+       <property name="styleSheet">
+        <string notr="true"/>
+       </property>
+       <property name="text">
+        <string>KEEP  LOAD</string>
+       </property>
+       <property name="alignment">
+        <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
+       </property>
+      </widget>
      </widget>
     </widget>
     <widget class="QGroupBox" name="groupBox_5">
@@ -837,7 +998,7 @@ border-color: rgb(0, 0, 0);</string>
        <x>630</x>
        <y>550</y>
        <width>121</width>
-       <height>61</height>
+       <height>41</height>
       </rect>
      </property>
      <property name="font">
