--- a/FCI/ui/fci_43_admin_maintns.ui
+++ b/FCI/ui/fci_43_admin_maintns.ui
@@ -19,6 +19,10 @@
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
+  <property name="styleSheet">
+   <string notr="true">background-color: rgb(0, 170, 255);
+border-color: rgb(255, 255, 255);</string>
+  </property>
   <widget class="QWidget" name="centralwidget">
    <widget class="QFrame" name="frame">
     <property name="geometry">
@@ -35,13 +39,17 @@
      </font>
     </property>
     <property name="styleSheet">
-     <string notr="true">background-color: rgb(0, 170, 255);</string>
+     <string notr="true">background-color: rgb(0, 170, 255);
+color: rgb(255, 255, 255);</string>
     </property>
     <property name="frameShape">
-     <enum>QFrame::StyledPanel</enum>
+     <enum>QFrame::Box</enum>
     </property>
     <property name="frameShadow">
-     <enum>QFrame::Raised</enum>
+     <enum>QFrame::Plain</enum>
+    </property>
+    <property name="lineWidth">
+     <number>3</number>
     </property>
     <widget class="QLabel" name="label_20">
      <property name="geometry">
@@ -71,34 +79,10 @@
       <set>Qt::AlignCenter</set>
      </property>
     </widget>
-    <widget class="QLabel" name="label">
-     <property name="geometry">
-      <rect>
-       <x>500</x>
-       <y>20</y>
-       <width>231</width>
-       <height>51</height>
-      </rect>
-     </property>
-     <property name="font">
-      <font>
-       <family>Arial</family>
-       <pointsize>16</pointsize>
-       <weight>75</weight>
-       <bold>true</bold>
-      </font>
-     </property>
-     <property name="text">
-      <string>MAINTAINCE </string>
-     </property>
-     <property name="alignment">
-      <set>Qt::AlignCenter</set>
-     </property>
-    </widget>
     <widget class="QGroupBox" name="groupBox_6">
      <property name="geometry">
       <rect>
-       <x>230</x>
+       <x>40</x>
        <y>210</y>
        <width>711</width>
        <height>331</height>
@@ -114,10 +98,13 @@
      </property>
      <property name="styleSheet">
       <string notr="true">color: rgb(0, 0, 0);
-border-color: rgb(0, 0, 0);</string>
+</string>
      </property>
      <property name="title">
       <string> LOAD CELL SIGNAL</string>
+     </property>
+     <property name="flat">
+      <bool>false</bool>
      </property>
      <widget class="QLCDNumber" name="lcdNumber">
       <property name="geometry">
@@ -141,6 +128,9 @@ border-color: rgb(0, 0, 0);</string>
        <string notr="true">background-color: rgb(0, 0, 0);
 font: 10pt &quot;MS Sans Serif&quot;;
 color: rgb(255, 255, 255);</string>
+      </property>
+      <property name="digitCount">
+       <number>7</number>
       </property>
      </widget>
      <widget class="QLabel" name="label_4">
@@ -210,15 +200,18 @@ font: 10pt &quot;MS Sans Serif&quot;;
 color: rgb(255, 0, 0);
 border-color: rgb(255, 0, 0);</string>
       </property>
+      <property name="digitCount">
+       <number>7</number>
+      </property>
      </widget>
     </widget>
     <widget class="QPushButton" name="pushButton_9">
      <property name="geometry">
       <rect>
        <x>990</x>
-       <y>90</y>
+       <y>100</y>
        <width>121</width>
-       <height>61</height>
+       <height>51</height>
       </rect>
      </property>
      <property name="font">
@@ -230,8 +223,8 @@ border-color: rgb(255, 0, 0);</string>
       </font>
      </property>
      <property name="styleSheet">
-      <string notr="true">background-color: rgb(209, 8, 45);
-color: rgb(255, 255, 0);</string>
+      <string notr="true">color: rgb(255, 255, 255);
+background-color: rgb(58, 150, 4);</string>
      </property>
      <property name="text">
       <string>RETURN</string>
@@ -240,7 +233,7 @@ color: rgb(255, 255, 0);</string>
     <widget class="QGroupBox" name="groupBox_7">
      <property name="geometry">
       <rect>
-       <x>230</x>
+       <x>50</x>
        <y>570</y>
        <width>711</width>
        <height>91</height>
@@ -281,7 +274,7 @@ color: rgb(255, 255, 255);</string>
        <string notr="true">color: rgb(255, 255, 0);</string>
       </property>
       <property name="text">
-       <string>Successfully set Capacity.</string>
+       <string>Invalid Password</string>
       </property>
       <property name="alignment">
        <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
@@ -304,6 +297,9 @@ color: rgb(255, 255, 255);</string>
        <weight>75</weight>
        <bold>true</bold>
       </font>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">background-color: rgb(255, 255, 255);</string>
      </property>
      <property name="text">
       <string/>
@@ -337,9 +333,9 @@ color: rgb(255, 255, 255);</string>
      <property name="geometry">
       <rect>
        <x>650</x>
-       <y>90</y>
+       <y>100</y>
        <width>121</width>
-       <height>61</height>
+       <height>51</height>
       </rect>
      </property>
      <property name="font">
@@ -351,8 +347,8 @@ color: rgb(255, 255, 255);</string>
       </font>
      </property>
      <property name="styleSheet">
-      <string notr="true">background-color: rgb(209, 8, 45);
-color: rgb(255, 255, 0);</string>
+      <string notr="true">color: rgb(255, 255, 255);
+background-color: rgb(58, 150, 4);</string>
      </property>
      <property name="text">
       <string>SHOW</string>
@@ -362,9 +358,178 @@ color: rgb(255, 255, 0);</string>
      <property name="geometry">
       <rect>
        <x>820</x>
-       <y>90</y>
+       <y>100</y>
        <width>121</width>
-       <height>61</height>
+       <height>51</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <family>Arial</family>
+       <pointsize>16</pointsize>
+       <weight>75</weight>
+       <bold>true</bold>
+      </font>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">color: rgb(255, 255, 255);
+background-color: rgb(58, 150, 4);</string>
+     </property>
+     <property name="text">
+      <string>CLEAR</string>
+     </property>
+    </widget>
+    <widget class="Line" name="line">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>180</y>
+       <width>1201</width>
+       <height>20</height>
+      </rect>
+     </property>
+     <property name="frameShadow">
+      <enum>QFrame::Plain</enum>
+     </property>
+     <property name="lineWidth">
+      <number>3</number>
+     </property>
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
+     </property>
+    </widget>
+    <widget class="QFrame" name="frame_2">
+     <property name="geometry">
+      <rect>
+       <x>780</x>
+       <y>220</y>
+       <width>401</width>
+       <height>171</height>
+      </rect>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">color: rgb(255, 255, 0);
+background-color: rgb(0, 85, 0);</string>
+     </property>
+     <property name="frameShape">
+      <enum>QFrame::Box</enum>
+     </property>
+     <property name="frameShadow">
+      <enum>QFrame::Plain</enum>
+     </property>
+     <property name="lineWidth">
+      <number>3</number>
+     </property>
+     <widget class="QLabel" name="label_3">
+      <property name="geometry">
+       <rect>
+        <x>40</x>
+        <y>20</y>
+        <width>131</width>
+        <height>51</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <family>Arial</family>
+        <pointsize>16</pointsize>
+        <weight>75</weight>
+        <bold>true</bold>
+       </font>
+      </property>
+      <property name="text">
+       <string>K-Factor    :</string>
+      </property>
+      <property name="alignment">
+       <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_5">
+      <property name="geometry">
+       <rect>
+        <x>190</x>
+        <y>20</y>
+        <width>161</width>
+        <height>51</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <family>Arial</family>
+        <pointsize>16</pointsize>
+        <weight>75</weight>
+        <bold>true</bold>
+       </font>
+      </property>
+      <property name="styleSheet">
+       <string notr="true"/>
+      </property>
+      <property name="text">
+       <string>122.007686787</string>
+      </property>
+      <property name="alignment">
+       <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_7">
+      <property name="geometry">
+       <rect>
+        <x>40</x>
+        <y>90</y>
+        <width>131</width>
+        <height>51</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <family>Arial</family>
+        <pointsize>16</pointsize>
+        <weight>75</weight>
+        <bold>true</bold>
+       </font>
+      </property>
+      <property name="text">
+       <string>C- Date      :</string>
+      </property>
+      <property name="alignment">
+       <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_8">
+      <property name="geometry">
+       <rect>
+        <x>190</x>
+        <y>90</y>
+        <width>181</width>
+        <height>51</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <family>Arial</family>
+        <pointsize>16</pointsize>
+        <weight>75</weight>
+        <bold>true</bold>
+       </font>
+      </property>
+      <property name="styleSheet">
+       <string notr="true"/>
+      </property>
+      <property name="text">
+       <string>2020-10-19 14:55</string>
+      </property>
+      <property name="alignment">
+       <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
+      </property>
+     </widget>
+    </widget>
+    <widget class="QPushButton" name="pushButton_12">
+     <property name="geometry">
+      <rect>
+       <x>890</x>
+       <y>430</y>
+       <width>171</width>
+       <height>51</height>
       </rect>
      </property>
      <property name="font">
@@ -380,7 +545,60 @@ color: rgb(255, 255, 0);</string>
 color: rgb(255, 255, 0);</string>
      </property>
      <property name="text">
-      <string>CLEAR</string>
+      <string>ZERO</string>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_9">
+     <property name="geometry">
+      <rect>
+       <x>490</x>
+       <y>30</y>
+       <width>231</width>
+       <height>41</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <family>Arial</family>
+       <pointsize>18</pointsize>
+       <weight>75</weight>
+       <bold>true</bold>
+      </font>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">color: rgb(244, 244, 0);
+background-color: rgb(170, 0, 0);</string>
+     </property>
+     <property name="text">
+      <string>MAINTAINCE</string>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignCenter</set>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="pushButton_13">
+     <property name="geometry">
+      <rect>
+       <x>890</x>
+       <y>590</y>
+       <width>171</width>
+       <height>51</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <family>Arial</family>
+       <pointsize>16</pointsize>
+       <weight>75</weight>
+       <bold>true</bold>
+      </font>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">color: rgb(255, 255, 255);
+background-color: rgb(58, 150, 4);</string>
+     </property>
+     <property name="text">
+      <string>LOG</string>
      </property>
     </widget>
    </widget>
